syntax = "proto3";

package mu.micro.book.service.user;

service User {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
	rpc QueryUserByName (UserRequest) returns (UserResponse){

	}
}
message user {
    int64 id = 1;
    string name = 2;
    string pwd = 3;
    uint64 createdTime = 4;
    uint64 updatedTime = 5;
}
message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}
message UserRequest {
    string userID = 1;
    string userName = 2;
    string userPwd = 3;
}

message UserResponse {
    bool success = 1;
    Error error = 2;
    user user = 3;
}
message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}

message Error {
    int32 code = 1;
    string detail = 2;
}